# Parallel-Computing-Cmake_Project

./: CMakeLists.txt  README.md  README.txt
include/: createMesh.h  initialize.h  io.h  parameter.h  solveWave.h  timer.h  validate.h
src/: Makefile  createMesh.c
